--- a/fu.zhen/styleguide/index.html
+++ b/fu.zhen/styleguide/index.html
@@ -114,7 +114,7 @@
 	<div class="container" id="viewwindow">
 		<h2>View Window</h2>
 	</div>
-	<div class="view-window" style="background-image: url('../img/moutain.jpeg');">
+	<div class="view-window" style="background-image: url('../img/earing.jpg');">
 	</div>
 	
 
