--- a/christiansen.nikoline/styleguide/index.html
+++ b/christiansen.nikoline/styleguide/index.html
@@ -431,6 +431,48 @@
 				</div>
 			</div>
 		</div>
+
+
+
+
+		<div id="fig-overlay1" class="soft card">
+			<h3>Product Bottom Overlay</h3>
+			<div class="grid gap" >
+				<div class="col-xs-12 col-md-4">
+					<figure class="figure product-overlay">
+						<img src="https://via.placeholder.com/400x400?text=product" alt="">
+						<figcaption>
+							<div class="caption-body">
+								<div>Product Name</div>
+								<div>$00.00</div>
+							</div>
+						</figcaption>
+					</figure>
+				</div>
+				<div class="col-xs-12 col-md-4">
+					<figure class="figure product-overlay">
+						<img src="https://via.placeholder.com/400x400?text=product" alt="">
+						<figcaption>
+							<div class="caption-body">
+								<div>Product Name</div>
+								<div>$00.00</div>
+							</div>
+						</figcaption>
+					</figure>
+				</div>
+				<div class="col-xs-12 col-md-4">
+					<figure class="figure product-overlay">
+						<img src="https://via.placeholder.com/400x400?text=product" alt="">
+						<figcaption>
+							<div class="caption-body">
+								<div>Product Name</div>
+								<div>$00.00</div>
+							</div>
+						</figcaption>
+					</figure>
+				</div>
+			</div>
+		</div>
 	</div>
 <!---------------------------------------- FORMS ---------------------------------------->
 	<div class="container" id="form">
