--- a/Kardan_Kosar/styleGuide/index.html
+++ b/Kardan_Kosar/styleGuide/index.html
@@ -199,25 +199,48 @@
 		<!-- GRID SYSTEM -->
 	
 		<div class="container">
-			<h2>Grid System</h2>
+			<h2 id="gridSystem">Grid System</h2>
 			<div>
-			<div class="card soft">
-				<h3>Responsive Grid System</h3>
-				<div class="card soft grid gap">
-					<div class="card dark col-md-2 col-sm-6">1</div>
-					<div class="card dark col-md-2 col-sm-6">2</div>
-					<div class="card dark col-md-2 col-sm-6">3</div>
-					<div class="card dark col-md-2 col-sm-6">4</div>
-					<div class="card dark col-md-2 col-sm-6">5</div>
-					<div class="card dark col-md-2 col-sm-6">6</div>
-				</div>	
+				<div class="card soft">
+					<h3>Responsive Grid System</h3>
+					<div class="card soft grid gap">
+						<div class="card dark col-md-2 col-sm-6">1</div>
+						<div class="card dark col-md-2 col-sm-6">2</div>
+						<div class="card dark col-md-2 col-sm-6">3</div>
+						<div class="card dark col-md-2 col-sm-6">4</div>
+						<div class="card dark col-md-2 col-sm-6">5</div>
+						<div class="card dark col-md-2 col-sm-6">6</div>
+					</div>	
+					<div class="card soft grid gap">
+						<div class="card dark col-md-3 col-sm-4">1</div>
+						<div class="card dark col-md-6 col-sm-4">2</div>
+						<div class="card dark col-md-3 col-sm-4">3</div>
+					</div>	
+				</div>
 			</div>
 		</div>
 
 		<!-- FLEX SYSTEM -->
 	
 		<div class="container">
-			<h2>Flex System</h2>
+			<h2 id="flexSysyem">Flex System</h2>
+			<div class="card soft">
+				<div class="display-flex flex-align-center flex-justify-center gap">
+					<div>Text</div>
+					<div>Text</div>
+					<div>Text</div>
+				</div>
+				<div class="display-flex flex-align-center flex-justify-space-around gap">
+					<div>Text</div>
+					<div>Text</div>
+					<div>Text</div>
+				</div>
+				<div class="display-flex flex-align-center flex-justify-space-evenly gap">
+					<div>Text</div>
+					<div>Text</div>
+					<div>Text</div>
+				</div>
+			</div>
 		</div>
 
 
