--- a/tu.hsuanling/styleguide/index.html
+++ b/tu.hsuanling/styleguide/index.html
@@ -6,6 +6,10 @@
 
 	<title>CSS Styleguide</title>
 
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet"> 
+
 	<link rel="stylesheet" href="../lib/css/styleguide.css">
 	<link rel="stylesheet" href="../lib/css/gridsystem.css">
 	<link rel="stylesheet" href="../css/storetheme.css">
@@ -19,21 +23,21 @@
 	<header class="navbar">
 		<div class="container display-flex">
 			<div class="flex-none">
-				<h1>Styleguide</h1>
+				<h1 style="color: var(--color-main-light);">Styleguide.</h1>
 			</div>
 			<div class="flex-stretch"></div>
 			
 		
 			<nav class="flex-none nav">
 				<ul class="container display-flex">
-					<li><a href="#tableofcontents">Table of Contents</a></li>
+					<li><a style="font-weight: 300;" href="#tableofcontents">Table of Contents</a></li>
 				</ul>
 			</nav>
 		</div>
 	</header>
 
 	<div class="container" id="tableofcontents">
-		<h2>Table of Contents</h2>
+		<h2>Table of Contents.</h2>
 		<div class="card">
 			<nav class="nav">
 				<ul>
@@ -61,7 +65,7 @@
 	</div>
 
 	<div class="container" id="typography">
-		<h2>Typography</h2>
+		<h2>Typography.</h2>
 
 		<div class="card soft" id="headings">
 			<h3>Headings</h3>
@@ -82,7 +86,7 @@
 	</div>
 
 	<div class="container" id="cards">
-		<h2>Cards</h2>
+		<h2>Cards.</h2>
 		
 		<div class="grid gap">
 			<div class="col-xs-12 col-md-4">
@@ -107,7 +111,7 @@
 	</div>
 
 	<div class="container" id="navigations">
-		<h2>Navigations</h2>
+		<h2>Navigations.</h2>
 
 		<script>
 			const makeNav = (classes='') => {
@@ -174,7 +178,7 @@
 	</div>
 
 	<div class="container" id="viewwindow">
-		<h3>View Window</h3>
+		<h3>View Window.</h3>
 		<div class="view-window" style="background-image: url('../img/pexels-scott-webb-305827.jpg');">
 	</div>
 
@@ -203,7 +207,7 @@
 	</script>
 
 	<div class="container" id="tables">
-		<h2>Tables</h2>
+		<h2>Tables.</h2>
 
 		<div class="card soft">
 			<h3>Basic Table</h3>
@@ -243,7 +247,7 @@
 
 		<div class="container" id="figures">
 
-		<h2>Figures</h2>
+		<h2>Figures.</h2>
 
 		<div class="card">
 			<h3>Basic Figure</h3>
@@ -357,7 +361,7 @@
 	</div>
 
 	<div class="container" id="forms">
-		<h2>Forms</h2>
+		<h2>Forms.</h2>
 
 		<h3 id="inputs">Inputs</h3>
 		<div class="card soft">
@@ -424,7 +428,7 @@
 			</form>
 		</div>
 
-		<h2 id="buttons">Buttons</h2>
+		<h2 id="buttons">Buttons.</h2>
 		<div class="card soft">
 			<h3>Default Buttons</h3>
 			<button>Button</button>
@@ -441,7 +445,7 @@
 			</div>
 		</div>
 
-		<h2 id="buttons">Hotdog</h3>
+		<h2 id="buttons">Hotdog.</h3>
 		<div class="card soft">
 			<div class="form-control">
 				<form>
@@ -454,7 +458,7 @@
 				</form>
 			</div>
 			<div class="form-control">
-				<form class="card dark">
+				<form class="card dark" style="background-color: var(--color-main-dark);">
 					<input type="search" class="hotdog light" placeholder="Search">
 				</form>
 			</div>
@@ -472,7 +476,7 @@
 			</div>
 		</div>
 
-		<h2 id="select">Select</h3>
+		<h2 id="select">Select.</h3>
 		<div class="card soft">
 			<div class="form-select">
 				<select>
@@ -498,7 +502,7 @@
 		</div>
 
 
-		<h2 id="checkboxes">Check Boxes</h3>
+		<h2 id="checkboxes">Check Boxes.</h3>
 
 		<div class="card soft">
 			<h3>Basic Checkbox</h3>
