--- a/chang.karen/grid_template.html
+++ b/chang.karen/grid_template.html
@@ -85,7 +85,7 @@
 	<div class="container">
 		<div class="card-1">
 			<h2>Responsive Grid</h2>
-				<div class="grid gap xs-small md-medium">
+				<div class="grid gap xs-small">
 					<div class="col-xs-12 col-md-6">column 6</div>
 					<div class="col-xs-12 col-md-6">column 6</div>
 
