--- a/tu.hsuanling/styleguide/index.html
+++ b/tu.hsuanling/styleguide/index.html
@@ -48,6 +48,7 @@
 						</ul>
 					<li><a href="#cards">Cards</a></li>
 					<li><a href="#navigations">Navigations</a></li>
+					<li><a href="#gridsystem">Grid System</a></li>
 					<li><a href="#viewwindow">View Window</a></li>
 					<li><a href="#tables">Tables</a></li>
 					<li><a href="#figures">Figures</a></li>	
@@ -165,6 +166,26 @@
 			<h3>Material Nav</h3>
 			
 			<script>makeNav('nav nav-material')</script>
+		</div>
+
+		<div class="container" id="gridsystem">
+			<h2>Grid System</h2>
+
+			<div class="card soft">
+				<h3>Responsive Grid System</h3>
+					<div class="grid gap">
+					<div class="card hard col-sm-2 col-lg-2">1</div>
+					<div class="card hard col-sm-3 col-lg-6">2</div>
+					<div class="card hard col-sm-4 col-lg-2">3</div>
+					<div class="card hard col-sm-2 col-lg-1">4</div>
+					<div class="card hard col-sm-1 col-lg-1">5</div>
+				</div>	
+				<div class="grid gap">
+					<div class="card hard col-sm-4 col-lg-4">1</div>
+					<div class="card hard col-sm-6 col-lg-4">2</div>
+					<div class="card hard col-sm-2 col-lg-4">3</div>
+				</div>	
+			</div>
 		</div>
 
 		<script>
