--- a/Kardan_Kosar/index.html
+++ b/Kardan_Kosar/index.html
@@ -19,22 +19,22 @@
 
 		<!-- header>h1+p -->
 		<header class="navbar">
-			<div class="container display-flex">
-				<div class="flex-none">
-					<h1>Jamieson Vitamins</h1>	
-				</div>
+			<nav class="container display-flex flex-align-center">
+				<ul id="storeIcons" class="display-flex">
+					<li>Burger</li>
+					<li>Logo</li>
+				</ul>
 				<div class="flex-stretch"></div>
 
 				<!-- nav.nav>ul>li*4>a[href=#article$]>{link $} -->
 				<nav class="nav">
 					<ul class="container display-flex">
-						<li><a href="#article1">Products</a></li>
-						<li><a href="#article2">Blog</a></li>
-						<li><a href="#article3">About us</a></li>
-						<li><a href="#article4">Social</a></li>
+						<li><a href="index.php">Home</a></li>
+						<li><a href="product_list.php">Products</a></li>
+						<li><a href="cart.php">Cart</a></li>
 					</ul>
 				</nav>
-			</div>
+			</nav>
 		</header>
 
 		<!-- responsive grid -->
@@ -109,8 +109,5 @@
 				</div>
 			</article>
 		</div>
-		<footer class="container footer display-flex flex-justify-center">
-			<p>©Kosar Kardan</p>
-		</footer>
 	</body>
 </html>
