--- a/Kardan_Kosar/styleGuide/index.html
+++ b/Kardan_Kosar/styleGuide/index.html
@@ -534,7 +534,7 @@
 						</div>
 					</form>
 
-						<h3>Form Control - Animated Label</h3>
+					<h3>Form Control - Animated Label</h3>
 					<form>
 						<div class="form-control">
 							<input id="nameInput" type="text" class="form-input interactive"/>
@@ -617,7 +617,6 @@
 										<option>4</option>
 									</select>
 								</div>
-								
 							</div>
 						</div>
 
@@ -660,7 +659,7 @@
 				</div>
 			</div>
 		</div>
-		<footer>©Kosar Kardan</footer>
+		<footer class="navbar">©Kosar Kardan</footer>
 		<script src="../js/main.js" type="text/javascript"></script>
 	</body>
 </html>
