--- a/christiansen.nikoline/styleguide/index.html
+++ b/christiansen.nikoline/styleguide/index.html
@@ -33,64 +33,64 @@
 		<div class="card">
 			<nav class="nav">
 				<ul>
-					<li><a href="#typography">Typography</a></li>
+					<li><a href="#typography"><strong>Typography</strong></a></li>
 					<ul>
-						<li><a href="#headings">Headings</a></li>
-						<li><a href="#paragraphs">Paragraphs</a></li>
+						<li style="text-indent: 10px"><a href="#headings">Headings</a></li>
+						<li style="text-indent: 10px"><a href="#paragraphs">Paragraphs</a></li>
 					</ul>
-					<li><a href="#cards">Card</a></li>
-					<li><a href="#viewwindow">View Window</a></li>
-					<li><a href="#navigations">Navigations</a></li>
+					<li><a href="#cards"><strong>Card</strong></a></li>
+					<li><a href="#viewwindow"><strong>View Window</strong></a></li>
+					<li><a href="#navigations"><strong>Navigations</strong></a></li>
 					<ul>
-						<li><a href="#nav">Basic Navigation</a></li>
-						<li><a href="#nav-flex">Flex Navigation</a></li>
-						<li><a href="#nav-stretch">Stretch Navigation</a></li>
-						<li><a href="#nav-pills">Pill Navigation</a></li>
-						<li><a href="#nav-crumbs">Crumbs Navigation</a></li>
-						<li><a href="#nav-material">Materials Navigation</a></li>
+						<li style="text-indent: 10px"><a href="#nav">Basic Navigation</a></li>
+						<li style="text-indent: 10px"><a href="#nav-flex">Flex Navigation</a></li>
+						<li style="text-indent: 10px"><a href="#nav-stretch">Stretch Navigation</a></li>
+						<li style="text-indent: 10px"><a href="#nav-pills">Pill Navigation</a></li>
+						<li style="text-indent: 10px"><a href="#nav-crumbs">Crumbs Navigation</a></li>
+						<li style="text-indent: 10px"><a href="#nav-material">Materials Navigation</a></li>
 					</ul>
-					<li><a href="#gridsystem">Grid System</a></li>
-					<li><a href="#flexsystem">Flex System</a></li>
-					<li><a href="#typography">Tables</a></li>
+					<li><a href="#gridsystem"><strong>Grid System</strong></a></li>
+					<li><a href="#flexsystem"><strong>Flex System</strong></a></li>
+					<li><a href="#typography"><strong>Tables</strong></a></li>
 					<ul>
-						<li><a href="#basic-table">Basic Table</a></li>
-						<li><a href="#striped-table">Striped Table</a></li>
-						<li><a href="#lined-vertical">Lined Vertical Table</a></li>
-						<li><a href="#lined-horizontal">Lined Horizontal Table</a></li>
-						<li><a href="#lined-border">Lined Border Table</a></li>
-						<li><a href="#lined-all">Lined All Table</a></li>
+						<li style="text-indent: 10px"><a href="#basic-table">Basic Table</a></li>
+						<li style="text-indent: 10px"><a href="#striped-table">Striped Table</a></li>
+						<li style="text-indent: 10px"><a href="#lined-vertical">Lined Vertical Table</a></li>
+						<li style="text-indent: 10px"><a href="#lined-horizontal">Lined Horizontal Table</a></li>
+						<li style="text-indent: 10px"><a href="#lined-border">Lined Border Table</a></li>
+						<li style="text-indent: 10px"><a href="#lined-all">Lined All Table</a></li>
 					</ul>
-					<li><a href="#typography">Figures</a></li>
+					<li><a href="#typography"><strong>Figures</strong></a></li>
 					<ul>
-						<li><a href="#fig-single">Single Figure</a></li>
-						<li><a href="#fig-grid">Figure Grid</a></li>
-						<li><a href="#fig-product">Product Grid</a></li>
-						<li><a href="#fig-overlay">Product Overlay</a></li>
+						<li style="text-indent: 10px"><a href="#fig-single">Single Figure</a></li>
+						<li style="text-indent: 10px"><a href="#fig-grid">Figure Grid</a></li>
+						<li style="text-indent: 10px"><a href="#fig-product">Product Grid</a></li>
+						<li style="text-indent: 10px"><a href="#fig-overlay">Product Overlay</a></li>
 					</ul>
-					<li><a href="#forms">Forms</a></li>
+					<li><a href="#forms"><strong>Forms</strong></a></li>
 						<ul>
-							<li><a href="#default-input">Deafult Input</a></li>
-							<li><a href="#form-input">Form Input</a></li>
-							<li><a href="#form-labels">Form Label</a></li>
-							<li><a href="#form-controls">From Control</a></li>
+							<li style="text-indent: 10px"><a href="#default-input">Deafult Input</a></li>
+							<li style="text-indent: 10px"><a href="#form-input">Form Input</a></li>
+							<li style="text-indent: 10px"><a href="#form-labels">Form Label</a></li>
+							<li style="text-indent: 10px"><a href="#form-controls">From Control</a></li>
 						</ul>
-					<li><a href="#buttons">Buttons</a></li>
+					<li><a href="#buttons"><strong>Buttons</strong></a></li>
 						<ul>
-							<li><a href="#default-button">Deafult Button</a></li>
-							<li><a href="#form-button">Form Button</a></li>
+							<li style="text-indent: 10px"><a href="#default-button">Deafult Button</a></li>
+							<li style="text-indent: 10px"><a href="#form-button">Form Button</a></li>
 						</ul>
-					<li><a href="#hotdog">Hotdog</a></li>
+					<li><a href="#hotdog"><strong>Hotdog</strong></a></li>
 						<ul>
-							<li><a href="#normal-hotdog">Normal Hotdog</a></li>
-							<li><a href="#input-hotdog">Input Hotdog</a></li>
+							<li style="text-indent: 10px"><a href="#normal-hotdog">Normal Hotdog</a></li>
+							<li style="text-indent: 10px"><a href="#input-hotdog">Input Hotdog</a></li>
 						</ul>	
-					<li><a href="#select">Select</a></li>
-					<li><a href="#checkboxes">Checkboxes</a></li>
+					<li><a href="#select"><strong>Select</strong></a></li>
+					<li><a href="#checkboxes"><strong>Checkboxes</strong></a></li>
 						<ul>
-							<li><a href="#basic-checkbox">Basic Checkbox</a></li>
-							<li><a href="#heart-example1">Heart Example</a></li>
+							<li style="text-indent: 10px"><a href="#basic-checkbox">Basic Checkbox</a></li>
+							<li style="text-indent: 10px"><a href="#heart-example1">Heart Example</a></li>
 						</ul>
-					<li><a href="#toggle">Toggle</a></li>				
+					<li><a href="#toggle"><strong>Toggle</strong></a></li>				
 
 
 				</ul>
