--- a/Kardan_Kosar/styleGuide/index.html
+++ b/Kardan_Kosar/styleGuide/index.html
@@ -41,10 +41,10 @@
 			<div class="card soft">
 				<nav class="nav">
 					<ul>
-						<li><a href="typography">Typography</a></li>
+						<li><a href="#typography">Typography</a></li>
 						<ul>
-							<li><a href="#headings">Headings</a></li>
-							<li><a href="#paragraph">Paragraph</a></li>
+							<li><a href="#headings">- Headings</a></li>
+							<li><a href="#paragraph">- Paragraph</a></li>
 						</ul>
 						<li><a href="#cards">Cards</a></li>
 						<li><a href="#viewWindow">ViewWindow</a></li>
@@ -53,7 +53,7 @@
 						<li><a href="#flexSysyem">Flex System</a></li>
 						<li><a href="#forms">Forms</a></li>
 						<ul>
-							<li><a href="#inpits">Inputs</a></li>
+							<li><a href="#inputs">Inputs</a></li>
 							<li><a href="#label">Labels</a></li>
 							<li><a href="#controls">Controls</a></li>
 							<li><a href="#buttons">Buttons</a></li>
@@ -86,7 +86,7 @@
 
 		<!-- CARDS -->
 
-		<div class="container">
+		<div class="container" id="cards">
 			<h2>Cards</h2>
 			
 			<div class="grid gap">
@@ -119,9 +119,9 @@
 
 		<!-- VIEW WINDOW -->
 
-		<div class="container">
+		<div class="container" id="viewWindow">
 			<h2>View Window</h2>
-			<div class="view-window half" style="background-image: url(../img/MedicineBottle.png);"></div>
+			<div class="view-window half" style="background-image: url(../img/Family.png);"></div>
 		</div>
 
 		
@@ -472,7 +472,7 @@
 			<!-- FORM -->
 			<div class="container" id="forms">
 				<h2>Forms</h2>
-				<h3>Inputs</h3>
+				<h3 id="inputs">Inputs</h3>
 				<div class="card soft">
 					<h3>Default Forms</h3>
 					<form action="" method="post">
@@ -504,7 +504,7 @@
 						<input type="search" placeholder="Search" class="form-input" />
 					</form>
 
-					<h3>Form Control</h3>
+					<h3 id="controls">Form Control</h3>
 					<form>
 						<div class="form-control">
 							<label for="" class="form-label">Name</label>
@@ -551,7 +551,7 @@
 					</form>
 
 
-					<h3>Buttons</h3>
+					<h3 id="buttons">Buttons</h3>
 					<div class="card soft">
 						<h3>Default Buttons</h3>
 						<button>Button</button>
@@ -568,7 +568,7 @@
 						</div>
 					</div>
 
-					<h2>Hotdog</h2>
+					<h2 id="hotdog">Hotdog</h2>
 					<div class="card soft">
 						<div class="form-control">
 							<form>
